# cpp_project_structure

./: .gitagnore  CMakeLists.txt  Dockerfile  docker-compose.yaml
app/: app.cpp
client/: CMakeLists.txt  CMakePresets.json  Dockerfile  HACKING.md  README.md  client.cpp  conanfile.py
client/cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
client/public/: index.html
client/source/: client.cpp  lib.cpp  main.cpp
include/: app.h
include/app/: app.h
include/calculator/: calculator.h
server/: CMakeLists.txt  Dockerfile  server.cpp
server/app/: app.cpp
server/include/app/: app.h
server/include/calculator/: calculator.h
server/src/: calculator.cpp
src/: CMakeLists.txt  calculator.cpp
test/: CMakeLists.txt  calculator_test.cpp
